--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
-/*  your css code here. If applicable */
+article{
+	backgorund-color:white;
+	padding:15px;
+	border:1px solid black;
+	position:relative;
+}
+li{
+	position: relative;
+	left:5px;
+}
